No iOS notifications until iOS 16

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <div style="width:75%;  position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%);">
 
 <h1>What is a web app?</h1>
-<p>A web app is basically a downloadable website that takes up less space than a normal app and allows for more features such as notifications.</p>
+<p>A web app is basically a downloadable website that takes up less space than a normal app and allows for more features. On Android, you'll be able to recieve notifications, 
+  with Apple bringing the feature to iOS later next year.</p>
 <h1>How do I install a web app?</h1>
 <h3>Android:</h3>
 <p>Tap install and follow the on-screen instructions</p>
